# container-bench

./: .gitignore  README.md  build.sh  dl_lib.sh  environment.yml  read_results.py  read_results.sh  result.md  run.sh
stencil/: CMakeLists.txt  build.sh
stencil/src/: stencil.cpp  stencil.hpp
